# pocowm

./: Cargo.toml  flake.nix
nix/: packages.nix  shell.nix
src/: input.rs  layout.rs  main.rs  renderer.rs  state.rs  window.rs
src/backends/: winit.rs
src/grabs/: mod.rs  move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  data_device.rs  mod.rs  output.rs  seat.rs  shm.rs  xdg_decoration.rs  xdg_foreign.rs  xdg_shell.rs
src/renderer/: _decorations.rs  _window.rs  mod.rs  window.rs
src/utils/: edge.rs  mod.rs
src/window/: borders.rs  decorations.rs  mod.rs  render.rs  seat.rs
